tests/machine/x/go/group_by_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_join.go:11:18: undefined: CustomersItem
../../../tests/machine/x/go/group_by_join.go:14:5: undefined: CustomersItem
../../../tests/machine/x/go/group_by_join.go:19:15: undefined: OrdersItem
../../../tests/machine/x/go/group_by_join.go:22:5: undefined: OrdersItem
../../../tests/machine/x/go/group_by_join.go:25:5: undefined: OrdersItem
../../../tests/machine/x/go/group_by_join.go:29:14: undefined: Stats
../../../tests/machine/x/go/group_by_join.go:59:16: undefined: Stats
../../../tests/machine/x/go/group_by_join.go:61:30: undefined: Stats

1: //go:build ignore
